--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -5,6 +5,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    position: fixed;
+    background: lightgray;
+
 }
 
 .nav-bubble{
@@ -23,5 +26,5 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: lightblue;
+    background: blue;
 }
