--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -6,8 +6,10 @@
     justify-content: space-around;
     align-items: center;
     position: fixed;
-    background: lightgray;
-
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    background: #DFDCE3;
 }
 
 .nav-bubble{
@@ -17,8 +19,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 4px blue solid;
+    border: 4px #FC4A1A solid;
     border-radius: 50%;
+    font-family: 'Bangers', cursive;
+    font-size: 28px;
 }
 
 .sub-bubble{
@@ -26,5 +30,5 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: blue;
+    background: #F7B733;
 }
