--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -22,13 +22,30 @@
     border: 4px #FC4A1A solid;
     border-radius: 50%;
     font-family: 'Bangers', cursive;
+    font-size: 22px;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+}
+
+.nav-bubble:hover {
     font-size: 28px;
 }
 
 .sub-bubble{
     margin-top: -20px;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+}
+.sub-bubble > span {
+    position: absolute;
     height: 20px;
     width: 20px;
     border-radius: 50%;
     background: #F7B733;
+    transition: all .1s ease-in-out;
+}
+
+.sub-bubble > span:hover {
+    transform: scale(1.2);
 }
