--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -10,6 +10,8 @@
     left: 0px;
     bottom: 0px;
     background: #DFDCE3;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    z-index: 2;
 }
 
 .nav-bubble{
