--- a/styles/content.css
+++ b/styles/content.css
@@ -13,11 +13,23 @@
     height: 100vh;
     padding: 10px; 
     font-family: 'Amatic SC', cursive;
-    font-size: 80px;
+}
+
+h1 {
+    margin: 0px;
+    padding: 0px;
+    display: inline-block;
+    font-size: 100px;
+    border-bottom: 4px solid black;
 }
 
 #hello {
     background: #4ABDAC;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 #contact-center{
