--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -49,5 +49,13 @@
 }
 
 .sub-bubble > span:hover {
-    transform: scale(1.2);
+    transform: scale(1.3);
+}
+
+.nav-bubble.focus {
+    font-size: 28px;
+}
+
+.sub-bubble.focus {
+    transform: scale(1.3);
 }
