worked on leftnav responsiveness and added a menu icon when the screen width is 950px or less to accomidate for smaller devices. Also changed the leftnav bubble focus to be passed to a slide when that slide covers more than 50% of the content.

--- a/styles/content.css
+++ b/styles/content.css
@@ -6,7 +6,14 @@
     top: 0px;
     left: 100px;
     right: 0px;
+    transition: all .2s ease-in-out;
+}
 
+@media (max-width: 950px) {
+    #content {
+        width: 100%;
+        left: 0px;
+    }
 }
 
 .slide {
