--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -12,6 +12,11 @@
     background: #DFDCE3;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     z-index: 2;
+    transition: all .2s ease-in-out;
+}
+
+#leftnav.closed {
+    left: -105px;
 }
 
 .nav-bubble{
@@ -58,4 +63,35 @@
 
 .sub-bubble.focus {
     transform: scale(1.3);
+}
+
+#menu-icon {
+    position: fixed;
+    top: 20px;
+    left: 0px;
+    width: 80px;
+    background: #FC4A1A;
+    z-index: 1;
+    text-align: right;
+    opacity: 0.5;
+}
+
+@media (min-width: 951px) {
+    #menu-icon {
+        display: none;
+    }
+
+    #leftnav {
+        left: 0px;
+    }
+
+    #leftnav.closed {
+        left: 0px;
+    }
+}
+
+.black-icon {
+    margin: 7px 20px;
+    height: 35px;
+    width: 35px;
 }
