--- a/styles/content.css
+++ b/styles/content.css
@@ -9,17 +9,23 @@
     transition: all .2s ease-in-out;
 }
 
-@media (max-width: 950px) {
-    #content {
-        width: 100%;
-        left: 0px;
-    }
-}
-
 .slide {
     height: 100vh;
     font-family: 'Amatic SC', cursive;
 }
+
+@media (max-width: 950px) {
+    #content {
+        height: calc(100% - 60px);
+        width: 100%;
+        left: 0px;
+        top: 60px;
+    }
+    .slide {
+        height: calc(100vh - 60px);
+    }
+}
+
 
 h1 {
     margin: 0px;
@@ -64,7 +70,6 @@ h1 {
     -8px 8px 0px #fc754f;
     transform: translate(2px, -4px);
 }
-
 
 #hello {
     background: #4ABDAC;
