--- a/styles/leftnav.css
+++ b/styles/leftnav.css
@@ -14,10 +14,10 @@
     z-index: 2;
     transition: all .2s ease-in-out;
 }
-
+/* 
 #leftnav.closed {
     left: -105px;
-}
+} */
 
 .nav-bubble{
     height: 70px;
@@ -65,33 +65,59 @@
     transform: scale(1.3);
 }
 
-#menu-icon {
-    position: fixed;
-    top: 20px;
-    left: 0px;
-    width: 80px;
-    background: #FC4A1A;
-    z-index: 1;
-    text-align: right;
-    opacity: 0.5;
-}
-
-@media (min-width: 951px) {
-    #menu-icon {
-        display: none;
-    }
-
+@media (max-width: 950px){
     #leftnav {
+        height: 60px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        top: 0px;
         left: 0px;
+        bottom: 0px;
     }
 
-    #leftnav.closed {
-        left: 0px;
+    .nav-bubble{
+        height: 40px;
+        width: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border: 3px #FC4A1A solid;
+        border-radius: 50%;
+        font-family: 'Bangers', cursive;
+        font-size: 18px;
+        cursor: pointer;
+        transition: all .1s ease-in-out;
     }
-}
 
-.black-icon {
-    margin: 7px 20px;
-    height: 35px;
-    width: 35px;
+    .nav-bubble:hover {
+        font-size: 22px;
+    }
+
+    .nav-bubble.focus {
+        font-size: 22px;
+    }
+
+
+    .sub-bubble{
+        margin-top: 0px;
+        margin-left: 0px;
+        cursor: pointer;
+        height: 10px;
+        width: 10px;
+    }
+
+    .sub-bubble > span {
+        position: absolute;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        background: #F7B733;
+        transition: all .1s ease-in-out;
+    }
+
+    .sub-bubble > span:hover {
+        transform: scale(1);
+    }
 }
