--- a/styles/content.css
+++ b/styles/content.css
@@ -11,7 +11,7 @@
 
 .slide {
     height: 100vh;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Itim', cursive;
 }
 
 @media (max-width: 950px) {
@@ -40,67 +40,6 @@ h1 {
     font-size: 30px;
     width: 70%;
     text-align: center;
-}
-
-.cta{
-    margin: 30px 5px;
-    padding: 20px;
-    text-align: center;
-    background: #FC4A1A;
-    box-shadow: -1px 1px 0px #fc754f,
-    -2px 2px 0px #fc754f,
-    -3px 3px 0px #fc754f,
-    -4px 4px 0px #fc754f,
-    -5px 5px 0px #fc754f,
-    -6px 6px 0px #fc754f;
-    border-radius: 8px;
-    font-family: 'Bangers', cursive;
-    font-size: 35px;
-    transition: all .2s ease-in-out;
-    cursor: pointer;
-}
-.cta:hover{
-         box-shadow: -1px 1px 0px #fc754f,
-    -2px 2px 0px #fc754f,
-    -3px 3px 0px #fc754f,
-    -4px 4px 0px #fc754f,
-    -5px 5px 0px #fc754f,
-    -6px 6px 0px #fc754f,
-    -7px 7px 0px #fc754f,
-    -8px 8px 0px #fc754f;
-    transform: translate(2px, -4px);
-}
-
-.cta:active{
-    box-shadow: -1px 1px 0px #fc754f,
-        -2px 2px 0px #fc754f;
-    transform: translate(-4px, 4px);
-}
-
-#hello {
-    background: #4ABDAC;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.split-memo {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.split-memo > div {
-    font-size: 30px;
-    font-weight: 700;
-}
-
-#contact-center{
-    background: #F7B733;
-
 }
 
 #my-team{
