--- a/styles/farewell.css
+++ b/styles/farewell.css
@@ -1,5 +1,5 @@
 #farewell {
-    background: #F7B733;
+    background: #4ABDAC;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
