--- a/styles/paul.css
+++ b/styles/paul.css
@@ -8,7 +8,9 @@
 
 .paul-img {
     height: 600px;
-    width: 400px;
+    width: 400px;  
+    /* height: 80%;
+    width: 60%; */
     background: lightgray; 
 }
 
