--- a/styles/contact-center.css
+++ b/styles/contact-center.css
@@ -66,3 +66,10 @@
     font-size: 18px;
     margin-top: 5px;
 }
+
+@media (max-width: 950px){
+    .caption {
+        font-size: 10px;
+        margin-top: 3px;
+    }
+}
