--- a/styles/hello.css
+++ b/styles/hello.css
@@ -64,3 +64,18 @@
         -2px 2px 0px #fc754f;
     transform: translate(-4px, 4px);
 }
+
+@media (max-width: 950px) {
+    .split-memo > div {
+        font-size: 18px;
+    }
+    .seperator{
+        width: 1px;
+        height: 30px;
+    }
+    .cta {
+        margin: 15px 5px;
+        padding: 10px;
+        font-size: 20px;
+    }
+}
