--- a/styles/learn.css
+++ b/styles/learn.css
@@ -7,6 +7,7 @@
 
 .grid {
     width: 60%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -15,12 +16,13 @@
 
 .tile {
     width: 23%;
-     min-width: 100px; 
+    min-width: 100px; 
     margin: 1%; 
     text-align: center;
     background: #DFDCE3;
     box-shadow: 0 2px 5px rgba(0,0,0,0.19), 0 2px 3px rgba(0,0,0,0.23); 
     border-radius: 5px;
+    font-size: 22px;
 }
 /* 
 .tile:hover {
@@ -29,4 +31,13 @@
 
 .tile.odd {
     background: #FC4A1A;
+}
+
+@media (max-width: 1000px){
+    .grid {
+        width: 90%;
+    }
+    .tile {
+        font-size: 16px;
+    }
 }
