removed pictures do to security reasons. added classified stamp to slideshow

--- a/styles/contact-center.css
+++ b/styles/contact-center.css
@@ -25,9 +25,9 @@
     align-items: flex-start;
 }
  
-.left > div {
-    font-size: 24px;
-} 
+ .left > div {
+    text-align: left;
+}  
 
 .right {
     position: static;
