--- a/styles/my-team.css
+++ b/styles/my-team.css
@@ -11,6 +11,7 @@
     width: 650px;
     background-image: url('../images/teampic.JPG');
     background-size: cover;
+    background-position: center;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
@@ -18,6 +19,53 @@
     height: 450px;
     width: 350px;
     background: lightgray;
+    background-size: cover;
+    background-position: center;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
+}
+
+@media (max-width: 1700px){
+    .team-img {
+        height: 375px;
+        width: 550px;
+    }
+
+    .jerry-img {
+        height: 375px;
+        width: 275px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .team-img {
+        height: 300px;
+        width: 400px;
+    }
+    .jerry-img {
+        height: 300px;
+        width: 220px;
+    }
+}
+
+@media (max-width: 950px){
+    .team-img {
+        height: 225px;
+        width: 350px;
+    }
+    .jerry-img {
+        height: 225px;
+        width: 150px;
+    }
+}
+
+@media (max-width: 550px) {
+    .team-img {
+        height: 150px;
+        width: 200px;
+    }
+    .jerry-img {
+        height: 150px;
+        width: 115px;
+    }
 }
