--- a/styles/my-team.css
+++ b/styles/my-team.css
@@ -18,7 +18,7 @@
 .jerry-img {
     height: 450px;
     width: 350px;
-    background: lightgray;
+    background-image: url('../images/jerry-pic.jpg');
     background-size: cover;
     background-position: center;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
