--- a/styles/project-one.css
+++ b/styles/project-one.css
@@ -95,16 +95,11 @@
     transform: translate(-3px, 3px);
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
 .flex-column {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex: 1;
 }
 
 .is-mobile {
@@ -143,5 +138,17 @@
     }
     .not-mobile {
         display: none;
+    }
+    .flex-column {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }  
+}
+
+@media (max-width: 400px) {
+    .image-window {
+        height: 155px;
+        width: 240px;
     }
 }
