finished making contact-center slide responsive

--- a/styles/content.css
+++ b/styles/content.css
@@ -32,6 +32,10 @@ h1 {
     text-align: center;
 }
 
+.text3 {
+    font-size: 22px;
+}
+
 @media (max-width: 1550px){
     h1 {
         font-size: 50px;
@@ -41,6 +45,9 @@ h1 {
 @media (max-width: 1300px){
     .text2 {
         font-size: 22px;
+    }
+    .text3 {
+        font-size: 16px;
     }
 }
 
@@ -62,4 +69,7 @@ h1 {
     .text2 {
         font-size: 18px;
     }
+    .text3 {
+        font-size: 14px;
+    }    
 }
