--- a/styles/contact-center.css
+++ b/styles/contact-center.css
@@ -35,31 +35,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
+    align-items: center;
 }
 
-.screenshots {
-    position: relative;
-    width: 370px;
-    height: 270px;
-}
-
-.screenshot1 {
-    height: 250px;
-    width: 350px;
-    background: gray;
-    position: absolute;
-    top: 0;
-    left: 0; 
-}
-
-.screenshot2 {
-    height: 250px;
-    width: 350px;
-    background: lightgray;
-    position: absolute;
-    top: 20px;
-    left: 20px; 
+.slideImage {
+    height: 100%;
+    width: 100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .caption {
