--- a/styles/project-one.css
+++ b/styles/project-one.css
@@ -27,13 +27,14 @@
     position: relative;
 }
 
-.slideImage {
+.slideImage2 {
     height: 100%;
     width: 100%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
+
 .center-box {
     position: relative;
     display: flex;
