--- a/styles/learn.css
+++ b/styles/learn.css
@@ -43,7 +43,7 @@
     width: 40px;
 }
 
-.flex-center {
+.flex-center2 {
     display: flex;
     justify-content: center;
     align-items: center;
