--- a/styles/content.css
+++ b/styles/content.css
@@ -36,6 +36,11 @@ h1 {
     font-size: 22px;
 }
 
+a {
+    text-decoration: none;
+    color: red;
+}
+
 @media (max-width: 1550px){
     h1 {
         font-size: 50px;
